# barracks

./: .gitignore  LICENSE  README.md  __main__.py  agent.py  pyproject.toml
src/cocapn_barracks/: __init__.py  cli.py  executor.py  queue.py  task.py
tests/: conftest.py  test_executor.py  test_queue.py  test_task.py
